--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
+    color: white;
 }
 
 .content{
@@ -9,6 +10,15 @@ body{
     flex-direction: column;
     flex-grow: 1;
     justify-content: space-around;
+}
+
+.contentbox{
+    display: flex;
+    margin: 20px 40px;
+    flex-basis: 800px;
+    & .c1{
+        justify-content: space-between;
+    }
 }
 
 .c1, .c2, .c3, .c4{
@@ -19,24 +29,24 @@ body{
 }
 
 .c1{
-    background-color: aqua;
+    background-color: #606c38;
 }
 
 .c2{
-    background-color: blueviolet;
+    background-color: #283618;
 }
 
 .c3{
-    background-color: chocolate;
+    background-color: #344e41;
 }
 
 .c4{
-    background-color:pink;
+    background-color: #582f0e;
 }
 
 .header, .footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: cornflowerblue;
+    background-color: #7f4f24
 }
