--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     align-items: center;
 }
 
-.c1, .c2, .c3, .c4{
+.contentbox{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,8 +29,9 @@ body{
 
 .c1{
     background-color: #606c38;
-    & .contentbox{
-        justify-content: space-between;
+    justify-content: space-between;
+    & p{
+        width: 500px;
     }
     & button{
         margin-top: auto;
@@ -39,14 +40,48 @@ body{
 
 .c2{
     background-color: #283618;
+    justify-content: space-around;
+    & .c2box{
+        width: 150px; 
+    }
+    & img{
+        border: 1px black solid;
+        border-radius: 25px;
+    }
 }
 
 .c3{
     background-color: #344e41;
+    flex-direction: column;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    & .quote{
+        max-width: 500px;
+        font-size: larger;
+        font-style: italic;
+    }
+    & .person{
+        margin: 0;
+        margin-left: 250px;
+        font-style: bolder;
+    }
+
 }
 
 .c4{
     background-color: #582f0e;
+    & .innerbox{
+        width: 80vh;
+        display: flex;
+        justify-content: space-around;
+        background-color: red
+    }
+    & .left{
+
+    }
+    & .right{
+        margin-top: auto;
+        margin-bottom: auto;
+    }
 }
 
 .header, .footer{
