--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body{
 
 .c1{
     background-color: #606c38;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 100px;
     & p{
         width: 500px;
     }
@@ -40,7 +41,9 @@ body{
 
 .c2{
     background-color: #283618;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 50px;
+    text-align: center;
     & .c2box{
         width: 150px; 
     }
