--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body{
     flex-direction: column;
     height: 100vh;
     color: white;
+    font-family: "Black Ops One", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .content{
@@ -32,10 +35,20 @@ body{
     justify-content: center;
     gap: 100px;
     & p{
-        width: 500px;
+        width: 650px;
     }
     & button{
+        text-align: center;
         margin-top: auto;
+    }
+    & .left{
+        margin-top: 15px;
+        margin-bottom: 15px;
+        & .left-item{
+            margin: 2px;
+            padding: 0px;
+            border: 0px;
+        }
     }
 }
 
@@ -44,12 +57,19 @@ body{
     justify-content: center;
     gap: 50px;
     text-align: center;
+    font-size: larger;
     & .c2box{
-        width: 150px; 
+        width: 150px;
     }
     & img{
         border: 1px black solid;
         border-radius: 25px;
+        width: 150px;
+        height: 150px;
+    }
+    & p{
+        height: 24px;
+        margin-top: 5px;
     }
 }
 
@@ -91,7 +111,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #7f4f24
+    background-color: #7f4f24;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .header{
