--- a/style.css
+++ b/style.css
@@ -1,11 +1,24 @@
 body{
+    background-image: url(./Images/camo1.jpg);
+    background-color: #7f4f24;
     display: flex;
     flex-direction: column;
     height: 100vh;
-    color: white;
+    color: blue;
     font-family: "Black Ops One", system-ui;
     font-weight: 400;
     font-style: normal;
+    margin: 0;
+}
+
+button{
+    font-family: "Black Ops One", system-ui;
+    font-size: larger;
+    height: 35px;
+    width: 100px;
+    flex-shrink: 0;
+    border: 0;
+    padding: 0;
 }
 
 .content{
@@ -16,6 +29,9 @@ body{
 }
 
 .contentbox{
+    border-color: pink;
+    border-width: 2px;
+    border-style: double;
     display: flex;
     flex: 1;
     padding: 0 150px;
@@ -23,37 +39,24 @@ body{
     align-items: center;
 }
 
-.contentbox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-}
-
 .c1{
-    background-color: #606c38;
     justify-content: center;
     gap: 100px;
     & p{
         width: 650px;
     }
     & button{
-        text-align: center;
-        margin-top: auto;
+        align-self: center;
     }
     & .left{
-        margin-top: 15px;
-        margin-bottom: 15px;
-        & .left-item{
-            margin: 2px;
-            padding: 0px;
-            border: 0px;
-        }
+        margin: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
     }
 }
 
 .c2{
-    background-color: #283618;
     justify-content: center;
     gap: 50px;
     text-align: center;
@@ -74,7 +77,6 @@ body{
 }
 
 .c3{
-    background-color: #344e41;
     flex-direction: column;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     & .quote{
@@ -91,7 +93,6 @@ body{
 }
 
 .c4{
-    background-color: #582f0e;
     & .innerbox{
         width: 80vh;
         display: flex;
