--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    color: blue;
+    color: whitesmoke;
     font-family: "Black Ops One", system-ui;
     font-weight: 400;
     font-style: normal;
@@ -29,14 +29,13 @@ button{
 }
 
 .contentbox{
-    border-color: pink;
-    border-width: 2px;
-    border-style: double;
+    background-color: #483c32;
     display: flex;
     flex: 1;
     padding: 0 150px;
     justify-content: center;
     align-items: center;
+    margin: 20px 70px;
 }
 
 .c1{
@@ -54,9 +53,13 @@ button{
         flex-direction: column;
         justify-content: space-around;
     }
+    & img{
+        transform: scale(0.7);
+    }
 }
 
 .c2{
+    padding: 15px;
     justify-content: center;
     gap: 50px;
     text-align: center;
@@ -79,6 +82,7 @@ button{
 .c3{
     flex-direction: column;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 15px;
     & .quote{
         max-width: 500px;
         font-size: larger;
@@ -93,11 +97,12 @@ button{
 }
 
 .c4{
+    padding: 15px;
     & .innerbox{
         width: 80vh;
         display: flex;
         justify-content: space-around;
-        background-color: red
+        background-color: #023020
     }
     & .left{
 
